tests/baselines/reference/asyncFunctionDeclaration5_es5.errors.txt
asyncFunctionDeclaration5_es5.ts(1,20): error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.


==== asyncFunctionDeclaration5_es5.ts (1 errors) ====
    async function foo(await): Promise<void> {
                       ~~~~~
!!! error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.
    }